Проверка почты и телефона при регистрации