@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
@@ -103,9 +104,12 @@ public class BookService {
     }
 
     public List<Book> getBooksFromCookie(String contents) {
-        contents = contents.startsWith("/") ? contents.substring(1) : contents;
-        contents = contents.endsWith("/") ? contents.substring(0, contents.length() - 1) : contents;
-        String[] cookieSlugs = contents.split("/");
-        return bookRepository.findBookEntitiesBySlugIn(List.of(cookieSlugs));
+        if (contents != null) {
+            contents = contents.startsWith("/") ? contents.substring(1) : contents;
+            contents = contents.endsWith("/") ? contents.substring(0, contents.length() - 1) : contents;
+            String[] cookieSlugs = contents.split("/");
+            return bookRepository.findBookEntitiesBySlugIn(List.of(cookieSlugs));
+        }
+        return Collections.emptyList();
     }
 }
